--- a/EMBD.X412.4/lab3/Lab3.ipynb
+++ b/EMBD.X412.4/lab3/Lab3.ipynb
@@ -42,10 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Use openssl to encrypt data\n",
-    "\n",
-    "cat iot-data.txt.enc \n",
-    "U2FsdGVkX189ec2EHxaFUDsX/G4qiYaYE7ZwpCipU6E=\n"
+    "2. Use openssl to encrypt data"
    ]
   },
   {
@@ -180,21 +177,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
