--- a/EMBD.X412.4/lab4/Lab4.ipynb
+++ b/EMBD.X412.4/lab4/Lab4.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -126,8 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -186,26 +188,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-316aab658838>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-316aab658838>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Ficing the issues with the example:\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
-    "Ficing the issues with the example:"
+    "2.b Fixing the issues with the example, filtering with number not lexicographically"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -243,57 +234,66 @@
    ],
    "source": [
     "# Output the filtered histogram \n",
-    "counts = textFile.flatMap(lambda x: x.split()) \\\n",
+    "counts2 = textFile.flatMap(lambda x: x.split()) \\\n",
     "    .filter(lambda x: int(x) <= 89) \\\n",
     "    .map(lambda x: (x, 1)) \\\n",
     "    .reduceByKey(add)\n",
-    "output = counts.collect()\n",
-    "for (word, count) in output:\n",
+    "output2 = counts2.collect()\n",
+    "for (word, count) in output2:\n",
     "    print(\"%s: %i\" % (word, count))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "3. Modify Step #2 with a compound Filter comparison to find a range instead of a threshold (HINT: Try using and/or).  Make sure to correct any bugs in the compound Filter so that the actual values in your output match the range of values that is expected from the modification.\n",
+    "\n",
+    "```\n",
+    "#####\n",
+    "# NOTE 2: Take a screenshot/snapshot or copy and paste the modified Python code\n",
+    "#         you created along with the session output to submit for this Lab.\n",
+    "#####\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: I'll use a filter that changes a range from 80 to 89 inclusive."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84: 1\n",
+      "81: 5\n",
+      "82: 7\n",
+      "85: 4\n",
+      "86: 2\n",
+      "87: 1\n",
+      "88: 1\n",
+      "89: 3\n",
+      "83: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "counts = textFile.flatMap(lambda x: x.split()) \\\n",
-    "    .filter(lambda x: (int(x) <= 89) && (int(x) >= 50) ) \\\n",
+    "counts3 = textFile.flatMap(lambda x: x.split()) \\\n",
+    "    .filter(lambda x: (int(x) <= 89) and (int(x) >= 80) ) \\\n",
     "    .map(lambda x: (x, 1)) \\\n",
     "    .reduceByKey(add)\n",
-    "output = counts.collect()\n",
-    "for (word, count) in output:\n",
+    "output3 = counts3.collect()\n",
+    "for (word, count) in output3:\n",
     "    print(\"%s: %i\" % (word, count))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
